# interview-practice

minipytest/: pyproject.toml
src/your_project.egg-info/: entry_points.txt
tests/: test_cache.py
ttl-cache/: pyproject.toml
ttl-cache/ttl_cache/: cache.py  errors.py  main.py  parser.py  server.py
ttl-cache/your_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
