[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
ttl-cache = "ttl_cache.main:run"

[project]
name = "your-project"
version = "0.1.0"

dependencies = [
  "requests>=2.31",
  "cachetools>=6.2.4"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
